<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.RegisterActivity"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:background="@color/colorPrimary"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="30dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    style="@style/viewParent.headerText.NoMode"
                    android:textColor="@color/whiteTextColor"
                    android:text="@string/silahkan_nregister_akun"
                    tools:ignore="RtlHardcoded" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="150dp"
                    android:src="@drawable/textpng"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/whiteTextColor"
                app:cardCornerRadius="10dp"
                android:id="@+id/cardview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputName"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:textColor="@color/black"
                            android:id="@+id/editTextName"
                            style="@style/modifiedEditText"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:hint="@string/masukkan_username"
                            tools:ignore="Autofill" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEmail"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:textColor="@color/black"
                            android:id="@+id/editTextEmail"
                            style="@style/modifiedEditText"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:hint="@string/login_email_hint"
                            android:importantForAutofill="no" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputMobile"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:id="@+id/editTextMobile"
                            style="@style/modifiedEditText"
                            android:inputType="text"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            android:hint="@string/mobile_number"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputPassword"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:textColor="@color/black"
                            android:id="@+id/editTextPassword"
                            style="@style/modifiedEditText"
                            android:hint="@string/masukkan_password"
                            android:maxLines="1"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputAlamat"
                        style="@style/parent"
                        android:layout_marginTop="@dimen/loginViewsMargin">
                        <EditText
                            android:textColor="@color/black"
                            android:id="@+id/editTextAlamat"
                            style="@style/modifiedEditText"
                            android:hint="@string/masukkan_alamat"

                            android:gravity="top|left"

                            android:overScrollMode="always"
                            android:scrollbarStyle="insideInset"
                            android:scrollbars="vertical"
                            android:lines="3"

                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:scrollHorizontally="false"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:text="Jenis Kelamin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_horizontal_margin"/>
                    <RadioGroup
                        android:id="@+id/radiogroup"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <RadioButton
                            android:id="@+id/laki"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Laki-laki"
                            />
                        <RadioButton
                            android:id="@+id/pr"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Perempuan"
                            />
                    </RadioGroup>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Spinner

                            android:id="@+id/spn_id"

                            android:layout_width="80dp"
                            android:layout_height="50dp"
                            android:padding="5dp"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_toRightOf="@id/spn_id"
                            android:layout_width="match_parent"

                            android:layout_marginBottom="@dimen/activity_horizontal_margin"
                            android:layout_height="wrap_content"
                            >

                            <com.google.android.material.textfield.TextInputEditText

                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/txt_noid"
                                android:inputType="number"
                                android:textColor="@color/black"
                                android:singleLine="true"
                                android:maxLength="20"
                                android:hint="No ID" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </RelativeLayout>
                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/cirRegisterButton"
                        style="@style/loginButton"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="#FFF"
                        android:text="Register"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        app:initialCornerAngle="27dp"
                        app:spinning_bar_padding="6dp"/>

                    <TextView
                        android:id="@+id/tvlogin"
                        style="@style/parent"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:textColor="@color/themeColor"
                        android:textSize="17sp"
                        android:text="Sudah Punya Akun ? Silahkan Login"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:onClick="onLoginClick"
                        android:gravity="center_horizontal"
                        tools:ignore="OnClick" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="12"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/whiteTextColor"
                    android:layout_weight="3"/>

                <TextView
                    style="@style/viewParent.headerText.NoMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/whiteTextColor"
                    android:text="Use other Methods"
                    android:layout_weight="6"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:gravity="center_horizontal" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/whiteTextColor"
                    android:layout_weight="3"/>

            </LinearLayout>

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:gravity="center"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:layout_marginBottom="30dp">-->
<!--                <ImageView-->
<!--                    android:id="@+id/btn_fb"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:src="@drawable/ic_facebook"/>-->
<!--                <ImageView-->
<!--                    android:id="@+id/btn_google"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:src="@drawable/ic_google_plus"-->
<!--                    android:layout_marginLeft="10dp"/>-->
<!--            </LinearLayout>-->


        </LinearLayout>
    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_side_bg"/>

</RelativeLayout>